--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- YOUR EXTERNAL CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body  class="beer-page">
 <!-- Splash screen -->
 <div id="splash-screen">
     <div class="splash-text" data-i18n-key="menuTitle" style="font-size: 3em">🍹 Bar Menu</div>
