Made better looking beverage page with real products and prices and added some styles.

--- a/beverages.html
+++ b/beverages.html
@@ -45,52 +45,113 @@
           placeholder="🔍 Search beverages…"
   />
 
-  <!-- Beverages category -->
+  <!-- Non-Alcoholic Beverages -->
   <section class="category">
     <h2 data-i18n-key="nonAlcoholicBeverages">Non-Alcoholic Beverages</h2>
     <div class="item-list">
-      <div
-              class="item"
-              data-name="Coca-Cola"
-              data-img="images/coca-cola.jpg"
-              data-desc="Classic cola with a crisp, refreshing taste."
-              data-price="$3.00"
-      >
-        <span class="item-name">Coca-Cola</span>
-        <span class="price">$3.00</span>
+      <div class="item" data-name="Coca-Cola 0.330ml" data-img="" data-desc="Classic Coca-Cola in a 330ml can." data-price="BGN 2.50">
+        <span class="item-name">Coca-Cola 0.330ml</span>
+        <span class="price">BGN 2.50</span>
       </div>
-      <div
-              class="item"
-              data-name="Orange Juice"
-              data-img="images/orange-juice.jpg"
-              data-desc="Freshly squeezed orange juice, no added sugar."
-              data-price="$3.50"
-      >
-        <span class="item-name">Orange Juice</span>
-        <span class="price">$3.50</span>
+      <div class="item" data-name="Fanta Orange 0.330ml" data-img="" data-desc="Tangy orange soda in a 330ml can." data-price="BGN 2.50">
+        <span class="item-name">Fanta Orange 0.330ml</span>
+        <span class="price">BGN 2.50</span>
       </div>
-      <div
-              class="item"
-              data-name="Sparkling Water"
-              data-img="images/sparkling-water.jpg"
-              data-desc="Bubbly mineral water to quench your thirst."
-              data-price="$2.50"
-      >
-        <span class="item-name">Sparkling Water</span>
-        <span class="price">$2.50</span>
+      <div class="item" data-name="Sprite 0.330ml" data-img="" data-desc="Lemon-lime soda in a 330ml can." data-price="BGN 2.50">
+        <span class="item-name">Sprite 0.330ml</span>
+        <span class="price">BGN 2.50</span>
       </div>
-      <div
-              class="item"
-              data-name="Lemonade"
-              data-img="images/lemonade.jpg"
-              data-desc="Homemade lemonade with a hint of mint."
-              data-price="$3.00"
-      >
-        <span class="item-name">Lemonade</span>
-        <span class="price">$3.00</span>
+      <div class="item" data-name="Mineral Water Bankia" data-img="" data-desc="Still mineral water in a 330ml bottle." data-price="BGN 1.50">
+        <span class="item-name">Mineral Water Bankia</span>
+        <span class="price">BGN 1.50</span>
+      </div>
+      <div class="item" data-name="Schweppes 0.330ml" data-img="" data-desc="Schweppes carbonated drink in a 330ml can." data-price="BGN 2.50">
+        <span class="item-name">Schweppes 0.330ml</span>
+        <span class="price">BGN 2.50</span>
+      </div>
+      <!-- 250ml variants -->
+      <div class="item" data-name="Coca-Cola 0.250ml" data-img="" data-desc="Classic Coca-Cola in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Coca-Cola 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Coca-Cola Zero 0.250ml" data-img="" data-desc="Coca-Cola Zero Sugar in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Coca-Cola Zero 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Fanta Orange 0.250ml" data-img="" data-desc="Tangy orange soda in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Fanta Orange 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Sprite 0.250ml" data-img="" data-desc="Lemon-lime soda in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Sprite 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <!-- Schweppes 250ml flavors -->
+      <div class="item" data-name="Schweppes Bitter Lemon 0.250ml" data-img="" data-desc="Schweppes Bitter Lemon in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Schweppes Bitter Lemon 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Schweppes Tangerine 0.250ml" data-img="" data-desc="Schweppes Tangerine soda in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Schweppes Tangerine 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Schweppes Soda 0.250ml" data-img="" data-desc="Schweppes soda water in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Schweppes Soda 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Schweppes Tonic 0.250ml" data-img="" data-desc="Schweppes tonic water in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Schweppes Tonic 0.250ml</span>
+        <span class="price">BGN 2.20</span>
       </div>
     </div>
   </section>
+
+  <!-- Natural Juices -->
+  <section class="category">
+    <h2 data-i18n-key="naturalJuices">Natural Juices Cappy</h2>
+    <div class="item-list">
+      <div class="item" data-name="Cappy Orange 0.250ml" data-img="" data-desc="Cappy Orange juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Orange 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Cappy Green Apple 0.250ml" data-img="" data-desc="Cappy Green Apple juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Green Apple 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Cappy Apple 0.250ml" data-img="" data-desc="Cappy Apple juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Apple 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Cappy Apricot 0.250ml" data-img="" data-desc="Cappy Apricot juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Apricot 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Cappy Peach 0.250ml" data-img="" data-desc="Cappy Peach juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Peach 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+      <div class="item" data-name="Cappy Sour Cherry 0.250ml" data-img="" data-desc="Cappy Sour Cherry juice in a 250ml bottle." data-price="BGN 2.20">
+        <span class="item-name">Sour Cherry 0.250ml</span>
+        <span class="price">BGN 2.20</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Energy Drinks -->
+  <section class="category">
+    <h2 data-i18n-key="energyDrinks">Energy Drinks</h2>
+    <div class="item-list">
+      <div class="item" data-name="Shark Energy Drink" data-img="" data-desc="Shark energy drink." data-price="BGN 4.50">
+        <span class="item-name">Shark Energy Drink</span>
+        <span class="price">BGN 4.50</span>
+      </div>
+      <div class="item" data-name="Red Bull" data-img="" data-desc="Red Bull energy drink." data-price="BGN 4.50">
+        <span class="item-name">Red Bull</span>
+        <span class="price">BGN 4.50</span>
+      </div>
+    </div>
+  </section>
+
 </main>
 
 <footer>
@@ -114,7 +175,7 @@
     <!-- ← Prev button -->
     <button class="nav-btn prev-btn" aria-label="Previous item">←</button>
 
-    <img id="modalImage" src="" alt="" />
+    <img id="modalImage" src="" alt="" style="width:100%; height:auto; object-fit:contain;" />
     <h3 id="modalName"></h3>
     <p id="modalDesc"></p>
     <p id="modalPrice" class="price"></p>
